fix #11 - input is misaligned and seems to be disable

--- a/src/components/ListEquipments/listEquipments.less
+++ b/src/components/ListEquipments/listEquipments.less
@@ -18,6 +18,8 @@
   .ant-select-selection, .ant-select-selection--single, .ant-input-number, input {
     border: none !important;
     background-color: transparent !important;
+    width: 150px !important;
+    overflow: hidden;
   }
 
   .set-time {
